fix: missing margin on login page, move forgot password below field

--- a/wine_cellar/assets/css/forms.css
+++ b/wine_cellar/assets/css/forms.css
@@ -132,6 +132,10 @@
 }
 
 .form-container {
+  margin-bottom: 1rem;
+}
+
+.form .form__fields .form-container {
   margin-bottom: 0;
 }
 
